--- a/PatientDemographics/PatientDemographics.csproj
+++ b/PatientDemographics/PatientDemographics.csproj
@@ -260,6 +260,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Filter\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
